--- a/MVVM/App.config
+++ b/MVVM/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="MVVM.Properties.Settings.Tema6ConnectionString" connectionString="Data Source=tema6guillermo.database.windows.net;Initial Catalog=Tema6;Persist Security Info=True;User ID=administrador;Password=admin123."
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
